--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "__bit_reference": "c",
         "bitset": "c",
-        "unordered_map": "c"
+        "unordered_map": "c",
+        "time.h": "c"
     }
 }
